--- a/automations.yaml
+++ b/automations.yaml
@@ -301,6 +301,9 @@
     - condition: state
       entity_id: binary_sensor.workday_sensor
       state: 'on'
+    - condition: state
+      entity_id: input_boolean.holiday_mode
+      state: 'off'
   action:
     - service: notify.html5_phone_marc
       data:
