--- a/configuration.yaml
+++ b/configuration.yaml
@@ -136,6 +136,12 @@ light:
         name: Salon
       192.168.0.26:
         name: Bandeau LED
+  - platform: 
+    name: Spot Xiaomi salon 1
+    host: 192.168.0.30
+    token: !secret spot_1_token
+    model: philips.light.downlight
+
 
 switch:
   - platform: broadlink
