--- a/lovelace/ui-home.yaml
+++ b/lovelace/ui-home.yaml
@@ -39,6 +39,7 @@
     - type: divider
     - entity: group.leds_livingroom
       name: LEDs
+    - entity: light.spot_xiaomi_salon_1
 
 - type: media-control
   entity: media_player.salon
