--- a/configuration.yaml
+++ b/configuration.yaml
@@ -136,10 +136,16 @@ light:
         name: Salon
       192.168.0.26:
         name: Bandeau LED
+
   - platform: xiaomi_miio
     name: Spot Xiaomi salon 1
     host: 192.168.0.30
     token: !secret spot_1_token
+    model: philips.light.downlight
+  - platform: xiaomi_miio
+    name: Spot Xiaomi salon 2
+    host: 192.168.0.31
+    token: !secret spot_2_token
     model: philips.light.downlight
 
 
