--- a/configuration.yaml
+++ b/configuration.yaml
@@ -147,7 +147,11 @@ light:
     host: 192.168.0.31
     token: !secret spot_2_token
     model: philips.light.downlight
-
+  - platform: xiaomi_miio
+    name: Spot Xiaomi salon 3
+    host: 192.168.0.32
+    token: !secret spot_3_token
+    model: philips.light.downlight
 
 switch:
   - platform: broadlink
