--- a/groups.yaml
+++ b/groups.yaml
@@ -37,6 +37,7 @@ leds_spot:
     - light.spot_xiaomi_salon_1
     - light.spot_xiaomi_salon_2
     - light.spot_xiaomi_salon_3
+    - light.spot_xiaomi_salon_4
 
 switches:
   name: Interrupteurs
