--- a/automations.yaml
+++ b/automations.yaml
@@ -336,3 +336,17 @@
     - service: cover.open_cover
       data:
         entity_id: group.all_covers
+
+- id: remote_open_cover
+  alias: Ouverture volets Télécommande
+  trigger:
+    platform: event
+    event_type: zwave.scene_activated
+    event_data: 
+      entity_id: zwave.hank_hkzwscn04_scene_controller
+      scene_id: 4
+      scene_data: 0
+  action:
+    - service: light.turn_on
+      data:
+        entity_id: group.leds_spot
