--- a/automations.yaml
+++ b/automations.yaml
@@ -275,8 +275,8 @@
     - service: light.turn_off
       data:
         entity_id: 
-          - light.salon
-          - light.bandeau_led        
+          - group.leds_spot
+          - group.leds_livingroom        
     - service: switch.turn_on
       data:
         entity_id: switch.neo_coolcam_power_plug_12a_switch_3
