--- a/configuration.yaml
+++ b/configuration.yaml
@@ -170,7 +170,7 @@ camera:
     limit_refetch_to_url_change: false
   - platform: generic
     name: Sejour
-    still_image_url: http://192.168.0.7/image.jpg
+    still_image_url: https://raw.githubusercontent.com/MarcBouteiller/home-assistant-configuration/master/assets/camera-off.png
 
 zwave:
   usb_path: /dev/ttyACM0
