try ble_tracker

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -53,7 +53,7 @@ device_tracker:
     new_device_defaults:
       track_new_devices: false
       hide_if_away: true
-  - platform: bluetooth_le_tracker
+  - platform: ble_tracker
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
