enhance night mode automation

--- a/automations.yaml
+++ b/automations.yaml
@@ -48,7 +48,18 @@
       data:
         entity_id: automation.veilleuse
 
-- id: night_mode_off
+- id: night_mode_on
+  alias: Mode nuit
+  trigger:
+    platform: state
+    entity_id: input_boolean.night_mode
+    to: 'off'
+  action:
+  - service: homeassistant.turn_off
+    data:
+      entity_id: automation.veilleuse
+
+- id: workday_night_mode_off
   alias: Lever
   trigger:
     platform: time
@@ -60,20 +71,11 @@
     - condition: state
       entity_id: input_boolean.holiday_mode
       state: 'off'
-  action:
-  - service: light.turn_on
-    data:
-      entity_id: light.salon
-      brightness: 25
-  - service: switch.turn_on
-    data:
-      entity_id: switch.neo_coolcam_power_plug_12a_switch_3
+  action: 
   - service: input_boolean.turn_off
     data:
       entity_id: input_boolean.night_mode
-  - service: homeassistant.turn_off
-    data:
-      entity_id: automation.veilleuse
+  
 
 # - id: leave_home
 #   alias: Absence
