--- a/automations.yaml
+++ b/automations.yaml
@@ -363,4 +363,4 @@
     - service: light.turn_on
       entity_id: light.spots_led
       data_template:
-        brightness: {{states.input_select.spots_state.state|int}}
+        brightness: "{{states.input_select.spots_state.state|int}}"
