--- a/automations.yaml
+++ b/automations.yaml
@@ -360,7 +360,12 @@
     event_data:
       entity_id: input_select.spots_state
   action:
-    - service: light.turn_on
+    - service_template: >-
+        {% if is_state('trigger.to_state','0') %}
+          light.turn_off
+        {% else %}
+          light.turn_on
+        {% endif %}
       entity_id: light.spots_led
       data_template:
-        brightness: "{{states.input_select.spots_state.state|int}}"
+        brightness_pct: "{{states.input_select.spots_state.state|int}}"
