--- a/automations.yaml
+++ b/automations.yaml
@@ -361,7 +361,7 @@
       entity_id: input_select.spots_state
   action:
     - service_template: >-
-        {% if is_state('trigger.to_state','0') %}
+        {% if is_state('input_select.spots_state','0') %}
           light.turn_off
         {% else %}
           light.turn_on
