--- a/automations.yaml
+++ b/automations.yaml
@@ -136,6 +136,10 @@
     platform: numeric_state
     entity_id: sensor.broadlink_spx_power_sensor
     below: 500
+  condition:
+    - condition: state
+      entity_id: input_boolean.garage_charging
+      state: 'on'
   action:
     - service: input_boolean.turn_off
       data:
