--- a/lovelace/ui-covers.yaml
+++ b/lovelace/ui-covers.yaml
@@ -1,18 +1,3 @@
-- title: Actions
-  type: entities
-  entities:
-    - script.ouverture_volets
-    - script.fermeture_volets
-    - type: divider
-    - type: call-service
-      icon: mdi:home
-      name: Positionner volets
-      action_name: Exécuter
-      service: script.positionner_volets
-      service_data:
-        position: 18
-    - input_number.covers_position
-
 - title: Sejour
   type: entities
   entities:
@@ -31,6 +16,26 @@
   type: entities
   entities:
     - cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_3
+
+- title: Etage
+  type: entities
+  entities:
+    - cover.fibaro_system_fgrm222_roller_shutter_controller_2_level_8
+
+- title: Actions
+  type: entities
+  entities:
+    - script.ouverture_volets
+    - script.fermeture_volets
+    - type: divider
+    - type: call-service
+      icon: mdi:home
+      name: Positionner volets
+      action_name: Exécuter
+      service: script.positionner_volets
+      service_data:
+        position: 18
+    - input_number.covers_position
 
 - title: Luminosité
   type: history-graph
