fix name of sensor

--- a/lovelace/ui-monitoring.yaml
+++ b/lovelace/ui-monitoring.yaml
@@ -11,7 +11,7 @@
   cards:
     - type: entities
       entities:
-        - sensor.disk_use_percent_
+        - sensor.disk_use_percent
     - type: history-graph
       entities:
         - sensor.processor_use
