--- a/automations.yaml
+++ b/automations.yaml
@@ -271,8 +271,8 @@
     - service: light.turn_off
       data:
         entity_id: 
-          - group.leds_spot
-          - group.leds_livingroom        
+          - light.spots_led
+          - light.livingrooms_led
     - service: switch.turn_on
       entity_id: switch.neo_coolcam_power_plug_12a_switch_3
 
