--- a/lovelace/ui-monitoring.yaml
+++ b/lovelace/ui-monitoring.yaml
@@ -1,15 +1,8 @@
 - type: vertical-stack
   cards:
     - type: horizontal-stack
-      cards:
-        - type: history-graph
-          title: Internet        
-          entities:
-            - sensor.speedtest_download
-            - sensor.speedtest_upload
-            - sensor.speedtest_ping
-            - sensor.fast_com_download
-        - type: vertical-stack
+      cards:        
+        - type: horizontal-stack
           cards:
             - type: gauge
               entity: sensor.speedtest_download
@@ -41,6 +34,13 @@
                 green: 85
                 yellow: 50
                 red: 0
+          - type: history-graph
+            title: Internet        
+            entities:
+              - sensor.speedtest_download
+              - sensor.speedtest_upload
+              - sensor.speedtest_ping
+              - sensor.fast_com_download
     
     - type: horizontal-stack
       cards:
