--- a/automations.yaml
+++ b/automations.yaml
@@ -302,7 +302,8 @@
       data:
         title: "Itineraires"
         message: "SII: {{ states.sensor.sii_roads.state }}\nOF: {{ states.sensor.ouest_france_roads.state }}"
-        url: /mobility
+        data:
+          url: /mobility
 
 - id: remote_night_mode_on
   alias: Mode nuit Télécommande
